Wrong overflow mode fix

--- a/css/ui.css
+++ b/css/ui.css
@@ -27,7 +27,7 @@ body {
     border: 1px solid white;
     width: 50vw;
     height: 50vh;
-    overflow: scroll;
+    overflow: auto;
     overflow-y: hidden;
 }
 
